<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reset_all"
        android:icon="@drawable/ic_action_reset_all"
        android:title="@string/action_reset_all"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_new_list"
        android:icon="@drawable/ic_action_add_new_list"
        android:title="@string/action_add_new_list"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

</menu>